Edit game_results table

--- a/Notebooks/preprocessing.ipynb
+++ b/Notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1011 entries, 0 to 1010\n",
+      "Data columns (total 41 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   YEAR                            1011 non-null   int64  \n",
+      " 1   SEED                            1011 non-null   int64  \n",
+      " 2   TEAM                            1011 non-null   object \n",
+      " 3   ROUND                           1011 non-null   int64  \n",
+      " 4   KENPOM ADJUSTED EFFICIENCY      1011 non-null   float64\n",
+      " 5   KENPOM ADJUSTED OFFENSE         1011 non-null   float64\n",
+      " 6   KENPOM ADJUSTED DEFENSE         1011 non-null   float64\n",
+      " 7   KENPOM ADJUSTED TEMPO           1011 non-null   float64\n",
+      " 8   BARTTORVIK ADJUSTED EFFICIENCY  1011 non-null   float64\n",
+      " 9   BARTTORVIK ADJUSTED OFFENSE     1011 non-null   float64\n",
+      " 10  BARTTORVIK ADJUSTED DEFENSE     1011 non-null   float64\n",
+      " 11  BARTHAG                         1011 non-null   float64\n",
+      " 12  ELITE SOS                       1011 non-null   float64\n",
+      " 13  BARTTORVIK ADJUSTED TEMPO       1011 non-null   float64\n",
+      " 14  2PT %                           1011 non-null   float64\n",
+      " 15  3PT %                           1011 non-null   float64\n",
+      " 16  FREE THROW %                    1011 non-null   float64\n",
+      " 17  EFG %                           1011 non-null   float64\n",
+      " 18  FREE THROW RATE                 1011 non-null   float64\n",
+      " 19  3PT RATE                        1011 non-null   float64\n",
+      " 20  ASSIST %                        1011 non-null   float64\n",
+      " 21  OFFENSIVE REBOUND %             1011 non-null   float64\n",
+      " 22  DEFENSIVE REBOUND %             1011 non-null   float64\n",
+      " 23  BLOCK %                         1011 non-null   float64\n",
+      " 24  TURNOVER %                      1011 non-null   float64\n",
+      " 25  2PT % DEFENSE                   1011 non-null   float64\n",
+      " 26  3PT % DEFENSE                   1011 non-null   float64\n",
+      " 27  FREE THROW % DEFENSE            1011 non-null   float64\n",
+      " 28  EFG % DEFENSE                   1011 non-null   float64\n",
+      " 29  FREE THROW RATE DEFENSE         1011 non-null   float64\n",
+      " 30  3PT RATE DEFENSE                1011 non-null   float64\n",
+      " 31  OP ASSIST %                     1011 non-null   float64\n",
+      " 32  OP O REB %                      1011 non-null   float64\n",
+      " 33  OP D REB %                      1011 non-null   float64\n",
+      " 34  BLOCKED %                       1011 non-null   float64\n",
+      " 35  TURNOVER % DEFENSE              1011 non-null   float64\n",
+      " 36  WINS ABOVE BUBBLE               1011 non-null   float64\n",
+      " 37  WIN %                           1011 non-null   float64\n",
+      " 38  POINTS PER POSSESSION OFFENSE   1011 non-null   float64\n",
+      " 39  POINTS PER POSSESSION DEFENSE   1011 non-null   float64\n",
+      " 40  TEAM.1                          1011 non-null   object \n",
+      "dtypes: float64(36), int64(3), object(2)\n",
+      "memory usage: 324.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_stats.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +496,7 @@
        "[1011 rows x 41 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +508,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2317 entries, 0 to 2316\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   YEAR         2317 non-null   int64 \n",
+      " 1   ROUND        2317 non-null   int64 \n",
+      " 2   WSEED        2317 non-null   int64 \n",
+      " 3   WTEAM        2317 non-null   object\n",
+      " 4   WSCORE       2317 non-null   int64 \n",
+      " 5   LSEED        2317 non-null   int64 \n",
+      " 6   LTEAM        2317 non-null   object\n",
+      " 7   LSCORE       2317 non-null   int64 \n",
+      " 8   BETTER_SEED  2317 non-null   int64 \n",
+      " 9   BETTER_TEAM  2317 non-null   object\n",
+      " 10  WORSE_SEED   2317 non-null   int64 \n",
+      " 11  WORSE_TEAM   2317 non-null   object\n",
+      " 12  UPSET        2317 non-null   int64 \n",
+      "dtypes: int64(9), object(4)\n",
+      "memory usage: 235.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "game_results.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -635,16 +735,328 @@
        "[2317 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop ['ROUND', 'WSCORE', 'LSCORE']\n",
-    "# Create field 'UPSET' (if 'WSEED' > 'LSEED' then 'yes')    FIGURE OUT WHAT TO DO WITH EQUAL SEEDS\n",
-    "# Create 'BETTER_SEED' and 'WORSE_SEED' fields\n",
     "game_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n",
+      "Do something\n"
+     ]
+    }
+   ],
+   "source": [
+    "better_seeds = []\n",
+    "better_teams = []\n",
+    "worse_seeds = []\n",
+    "worse_teams = []\n",
+    "upsets = []\n",
+    "\n",
+    "for row in game_results.iterrows():\n",
+    "    row = row[1]\n",
+    "    if row['WSEED'] == row['LSEED']:  # Maybe consider team from region with better #1 seed to be better seed\n",
+    "        print(\"Do something\")\n",
+    "        better_seeds.append(row['WSEED'])\n",
+    "        better_teams.append(row['WTEAM'])\n",
+    "        worse_seeds.append(row['LSEED'])\n",
+    "        worse_teams.append(row['LTEAM'])\n",
+    "        upsets.append(0)\n",
+    "    elif row['WSEED'] < row['LSEED']:\n",
+    "        better_seeds.append(row['WSEED'])\n",
+    "        better_teams.append(row['WTEAM'])\n",
+    "        worse_seeds.append(row['LSEED'])\n",
+    "        worse_teams.append(row['LTEAM'])\n",
+    "        upsets.append(0)\n",
+    "    else:\n",
+    "        better_seeds.append(row['LSEED'])\n",
+    "        better_teams.append(row['LTEAM'])\n",
+    "        worse_seeds.append(row['WSEED'])\n",
+    "        worse_teams.append(row['WTEAM'])\n",
+    "        upsets.append(1)\n",
+    "\n",
+    "game_results['BETTER_SEED'] = better_seeds\n",
+    "game_results['BETTER_TEAM'] = better_teams\n",
+    "game_results['WORSE_SEED'] = worse_seeds\n",
+    "game_results['WORSE_TEAM'] = worse_teams\n",
+    "game_results['UPSET'] = upsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>ROUND</th>\n",
+       "      <th>BETTER_SEED</th>\n",
+       "      <th>BETTER_TEAM</th>\n",
+       "      <th>WORSE_SEED</th>\n",
+       "      <th>WORSE_TEAM</th>\n",
+       "      <th>UPSET</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Baylor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gonzaga</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gonzaga</td>\n",
+       "      <td>11</td>\n",
+       "      <td>UCLA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Baylor</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Oregon State</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Baylor</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2312</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>North Carolina State</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2313</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Ohio State</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Iowa State</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2314</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>16</td>\n",
+       "      <td>North Carolina A&amp;T</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2315</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Notre Dame</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Oregon State</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2316</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Middle Tennessee State</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2317 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      YEAR  ROUND  BETTER_SEED           BETTER_TEAM  WORSE_SEED  \\\n",
+       "0     2021      6            1                Baylor           1   \n",
+       "1     2021      5            1               Gonzaga          11   \n",
+       "2     2021      5            1                Baylor           2   \n",
+       "3     2021      4            2               Houston          12   \n",
+       "4     2021      4            1                Baylor           3   \n",
+       "...    ...    ...          ...                   ...         ...   \n",
+       "2312  1985      1            3  North Carolina State          14   \n",
+       "2313  1985      1            4            Ohio State          13   \n",
+       "2314  1985      1            1              Oklahoma          16   \n",
+       "2315  1985      1            7            Notre Dame          10   \n",
+       "2316  1985      1            2        North Carolina          15   \n",
+       "\n",
+       "                  WORSE_TEAM  UPSET  \n",
+       "0                    Gonzaga      0  \n",
+       "1                       UCLA      0  \n",
+       "2                    Houston      0  \n",
+       "3               Oregon State      0  \n",
+       "4                   Arkansas      0  \n",
+       "...                      ...    ...  \n",
+       "2312                  Nevada      0  \n",
+       "2313              Iowa State      0  \n",
+       "2314      North Carolina A&T      0  \n",
+       "2315            Oregon State      0  \n",
+       "2316  Middle Tennessee State      0  \n",
+       "\n",
+       "[2317 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game_results[['YEAR', 'ROUND', 'BETTER_SEED', 'BETTER_TEAM', 'WORSE_SEED', 'WORSE_TEAM', 'UPSET']]"
    ]
   }
  ],
